styles/style.css
/* ... */
/* vid-metadata */
.vid-metadata {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    flex-wrap: wrap;
    background: #cccccc;
    padding: 0.5em;
    font-weight: 600;
    font-size: 0.85em;
    line-height: 1.2em;
}

.vid-metadata--in-section {
    flex: 0 0 auto;
    order: 1;
}

.vid-metadata--in-modal {
    flex: 0 0 auto;
    box-shadow: 1px 0px 0 0px #444, 0px 1px 0 0px #444, -1px 0px 0 0px #444;
}

.vid-metadata__item {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: 0 3px;
    text-align: center;
}

.vid-metadata__key, .vid-metadata__text {
    color: #545454;
}

.vid-metadata__key {
    margin-right: 0.25em;
}

.vid-metadata__text {
    margin: 0 0.25em;
}

.vid-metadata__value {
    color: #325c69;
}

.vid-metadata__link {
    text-decoration: underline;
}

.vid-metadata__link--italicize {
    font-style: italic;
}

.vid-metadata__viewer-btn {
    box-sizing: border-box;
    height: 1.75em;
    width: 2.75em;
    margin: 1.5px 0 01.5px 0.8em;
    margin: 3px 0 01.5px 0.8em;
    transform: translateY(-0.1em);
    padding: 0;
    border: none;
    background-image: url(../img/viewerIcon.png);
    background-size: contain;
    background-repeat: no-repeat;
    background-color: #fff0;
    cursor: pointer;
}

@media (min-width:900px) {
    .vid-metadata--in-section {
        order: initial;
    }

    .vid-metadata__viewer-btn {
        margin: 0 0 0 0.8em;
    }
}

/* content-img */
.content-img__fullscreen-container:fullscreen {
    display: flex;
    justify-content: center;
    align-items: center;
}

.content-img__fullscreen-container--fs-polyfill {
    position: fixed;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: #000;
    z-index: 100;
    display: flex;
    justify-content: center;
    align-items: center;
}

.content-img__img-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;
    width: 100%;
    max-height: 60vh;
    box-sizing: border-box;
    border: 7px #cccccc solid;
    border-radius: 10px;
    box-shadow: 0px 0px 0 1px #444;
}

.content-img__img-container--open-bottom {
    border-radius: 10px 10px 0px 0px;
    box-shadow: 0px -1px 0 0px #444, 1px 0px 0 0px #444, 0px 1px 0 0px #ccc, -1px 0px 0 0px #444;
}

.content-img__img-container--enlarged {
    max-height: 100vh;
}

.content-img__img-container--fs-polyfill {
    max-height: 100vh;
    margin: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
}

.content-img__img {
    width: 100%;
    min-height: 0;
    object-fit: contain;
    background: #fff;
}

.content-img__btn {
    display: flex;
    position: absolute;
    top: 0;
    right: 0;
    background: #ffffff87;
    border: none;
    margin: 0;
    padding: 2%;
    border-radius: 0 0 0 10px;
}

.content-img__btn--hidden {
    display: none;
}

.content-img__btn svg {
    width: 1.25em;
    fill: #15404e;
}

@media (min-width:900px) {
    .content-img__img-container {
        max-height: 50vh;
    }

    .content-img__img-container--enlarged {
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 2;
        box-shadow: 0px 0px 0 1px #444;
        max-height: none;
    }

    .content-img__btn {
        top: initial;
        bottom: 0;
        border-radius: 10px 0 0 0;
    }
}

/* protein-viewer */
.protein-viewer__fullscreen-container--fs-polyfill {
    position: fixed;
    left: 0;
    top: 0;
    width: 100vw;
    height: 100vh;
    background: #000;
    z-index: 100;
}

.protein-viewer__viewer-container {
    position: relative;
    box-sizing: border-box;
    border: 7px #ccc solid;
    border-radius: 10px;
    box-shadow: 0px 0px 0 1px #444;
    overflow: hidden;
}

.protein-viewer__viewer-container--fs-polyfill {
    height: 100%;
    margin: 0 env(safe-area-inset-right) 0 env(safe-area-inset-left);
}

.protein-viewer--hidden {
    display: none;
}

.protein-viewer__menu {
    position: absolute;
    display: flex;
    flex-direction: column;
    padding: 0.75em;
    background: #ffffffe6;
    border-radius: 0px 0px 10px 0px;
    font-size: 1rem;
    z-index: 2;
}

.protein-viewer__menu-label {
    color: #15404e;
    font-weight: 600;
    margin: 0.5em 0;
}

.protein-viewer__menu-select {
    font-size: 1em;
}

.protein-viewer__atom-label {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    padding: 1em;
    width: fit-content;
    background: #ffffff87;
    border-radius: 10px 10px 0 0;
    font-size: 1em;
    font-weight: 600;
    z-index: 2;
}

.protein-viewer__atom-label--hidden {
    display: none;
}

.protein-viewer__min-btn {
    display: flex;
    position: absolute;
    top: 0;
    right: 0;
    background: #ffffff87;
    border: none;
    margin: 0;
    padding: 2%;
    border-radius: 0 0 0 10px;
    z-index: 2;
}

.protein-viewer__min-btn svg {
    width: 1.25em;
    fill: #15404e;
}

@media (min-width:480px) {
    .protein-viewer__menu {
        flex-direction: row;
    }

    .protein-viewer__menu-label {
        margin: 0 0.5em;
    }
}

@media (min-width:900px) {
    .protein-viewer__viewer-container--enlarged {
        position: fixed;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: 100;
    }

    .protein-viewer__min-btn {
        top: initial;
        bottom: 0;
        border-radius: 10px 0 0 0;
    }
}

/* appendix-accordion-group */
.appendix-accordion-group__dropdown-anchor {
    position: absolute;
    margin-top: -72px;
}

.appendix-accordion-group__button {
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-sizing: border-box;
    margin: 0 0 20px 0;
    width: 100%;
    padding: 0.535em 0;
    border: none;
    border-bottom: 1px solid white;
    background: none;
}
/* ... */

